# GO3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: go3.html  html.html  index.html  search.js
docs/source/: conf.py  index.rst
go3/: Cargo.toml  pyproject.toml
go3/src/: go_loader.rs  go_ontology.rs  lib.rs
notebooks/: test_goatools.ipynb
src/: go_ontology.rs  go_semantic.rs
